# dns-server

./: Cargo.toml  Dockerfile  LICENSE  README.md  _config.yml
.github/workflows/: docker-hub.yml  release.yml  rust.yml
src/: ip.rs  main.rs
src/authority/: blacklist.rs  default.rs  domain_blacklist.rs  h2_blacklist.rs  local_dns.rs  mod.rs  none.rs  zone_blacklist.rs
src/client/: mod.rs
tests/resources/: local_dns_file.txt
