[package]
name = "dns-server"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Joxit/dns-server"
homepage = "https://github.com/Joxit/dns-server"
readme = "README.md"

[[bin]]
name = "dns-server"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.74"
clap = { version = "^4.4", features = ["derive", "env"] }
clap_complete = { version = "^4.4" }
hickory-server = { version = "^0.24", features = ["dns-over-https-rustls"] }
hickory-resolver = { version = "^0.24", features = ["dns-over-https-rustls", "native-certs"] }
hickory-client = { version = "^0.24", features = ["dns-over-https-rustls"] }
tokio = "^1.33"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rustls = "^0.22"
rustls-native-certs = "^0.7"
tokio-graceful = "^0.1"
