[package]
name = "dns-server"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/Joxit/dns-server"
homepage = "https://github.com/Joxit/dns-server"
readme = "README.md"

[[bin]]
name = "dns-server"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.89"
clap = { version = "^4.5", features = ["derive", "env"] }
clap_complete = { version = "^4.5" }
hickory-server = { version = "^0.25", features = ["https-ring", "resolver"] }
hickory-resolver = { version = "^0.25", features = ["https-ring"] }
hickory-client = { version = "^0.25", features = ["https-ring"] }
tokio = {version = "^1.47", features =["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
rustls = "^0.23"
rustls-native-certs = "^0.8"
tokio-graceful = "^0.2"
regex = "^1.11"
anyhow = "^1.0"
ipnet = "^2.11"
